# r3bl-cmdr

./: CONTRIBUTING.md  Cargo.toml  DONE.todo  README.md  TODO  TODO.todo  cargo-watch-all-tests.fish  cargo-watch-macro-expand-one-test.fish  cargo-watch-one-test.fish  clippy.fish  run.fish  rustfmt.toml
.github/ISSUE_TEMPLATE/: missing-feature.md
src/: lib.rs  main.rs  utils.rs
src/crossterm_helpers/: cmd_wrapper.rs  event_stream.rs  event_stream_ext.rs  input_event.rs  mod.rs  raw_mode.rs  tw_command.rs
src/ex_app_no_layout/: app_no_layout.rs  create_store.rs  launcher.rs  mod.rs
src/ex_app_with_layout/: action.rs  app_with_layout.rs  column_render_component.rs  debug.rs  launcher.rs  mod.rs  reducer.rs  state.rs
src/ex_lolcat/: launcher.rs  mod.rs
src/layout/: canvas.rs  layout_error.rs  layout_management.rs  mod.rs  style.rs  stylesheet.rs  tw_area.rs  tw_box.rs
src/layout/dimens/: base_units.rs  pair.rs  percent.rs  position.rs  size.rs
src/lolcat/: cat.rs  color_utils.rs  control.rs  mod.rs
src/sample_app/: app.rs  app_draw.rs  app_no_layout.rs  app_with_layout.rs  app_without_layout.rs  create_store.rs  launcher.rs  mod.rs
src/terminal_window/: base_handle_event.rs  debug.rs  default_event_handler.rs  default_input_event_handler.rs  draw.rs  handle_input_event.rs  main_container.rs  main_event_loop.rs  mod.rs  render.rs  type_alias.rs
src/tui/: mod.rs
src/tui/crossterm_helpers/: event_stream_ext.rs  input_event.rs  mod.rs  raw_mode.rs  tw_color.rs  tw_command.rs  tw_input_event.rs  tw_raw_mode.rs
src/tui/dimens/: mod.rs  position.rs
src/tui/layout/: layout_error.rs  layout_management.rs  mod.rs  style.rs  tw_area.rs  tw_box.rs  tw_surface.rs
src/tui/layout/dimens/: size.rs
src/tui/lolcat/: cat.rs  color_utils.rs
src/tui/styles/: mod.rs
src/tui/terminal_window/: default_input_event_handler.rs  event_routing_support.rs  main_event_loop.rs  mod.rs  render.rs  tw_app.rs  tw_component.rs  tw_default_input_event_handler.rs  tw_default_input_handler.rs  tw_focus_manager.rs  tw_main_event_loop.rs  tw_manage_focus.rs  tw_render_component.rs  type_alias.rs  type_aliases.rs  types.rs  types_and_macros.rs
src/tui_core/: mod.rs
src/tui_core/styles/: stylesheet.rs
tests/: test_dimens.rs  test_serde.rs  test_style.rs  test_tw_area.rs  test_tw_color.rs  test_tw_surface.rs
