[package]
name = "r3bl-cmdr"
version = "0.0.4" # remember to update README
readme = "README.md"
edition = "2021"
homepage = "https://r3bl.com"
license = "Apache-2.0"

description = """
WIP: a TUI layout manager for the Rust programming language.
"""

# TODO: Replace the following commented lines w/ real values
# categories = ["development-tools::procedural-macro-helpers"] # https://doc.rust-lang.org/cargo/reference/manifest.html#the-categories-field
# keywords = ["macros"] # https://doc.rust-lang.org/cargo/reference/manifest.html#the-keywords-field

# TODO: Replace the following lines w/ real values
repository = "https://github.com/r3bl-org/r3bl-cmdr"
authors = ["Nazmul Idris <idris@developerlife.com>"]
documentation = "https://developerlife.com/category/Rust/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Logging.
log = "0.4.16"
simplelog = "0.12.0"
time = "0.3.9"

# Crossterm & EventStream support.
crossterm = { version = "0.24.0", features = ["event-stream"] }
futures-util = "0.3.21"
paste = "1.0.7"

# Tokio.
tokio = { version = "1.17.0", features = ["full"] }

# https://github.com/serde-rs/serde.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# https://crates.io/crates/async-trait.
async-trait = "0.1.53"

# Latest r3bl_rs_utils.
r3bl_rs_utils = { version = "*", path = "../r3bl_rs_utils" }
# r3bl_rs_utils = { version = "0.7.40", path = "../r3bl_rs_utils" }

# Bitflags.
bitflags = "1.3.2"

# Readonly.
readonly = "0.2.1"

# For lolcat.
rand = "0.8.5"
atty = "0.2.14"

# Lazy static macro.
lazy_static = "1.4.0"

# Reedline.
reedline = "0.9.0"